--- a/assets/css/welcome.css
+++ b/assets/css/welcome.css
@@ -46,6 +46,6 @@ input[name="button2"]:hover{ color: #777; background-color: #fff; background: -w
 .input-error { color: #069586; }
 .notification {max-width: 800px;border:1px solid;margin-left:0px;margin-bottom:10px;padding:15px;text-align:center;font-weight:bold;font-size: 16px;}
 .notification h1 { margin-bottom: 5px; }
-.notification.success {border-color: #069586;line-height: 24px;color: #000;background-position:0px 1px}
+.notification.success {border-color: #069586;color: #069586;line-height: 24px;background-position:0px 1px}
 .notification.error {border-color: #069586;color: #069586;background-position:0 -7055px;}
 .loading { font-size: 10px; color:#069586; padding: 5px;}
