--- a/assets/css/welcome.css
+++ b/assets/css/welcome.css
@@ -32,8 +32,8 @@ min-height:100%;
 height:100%;
 margin:0 auto;padding:0 30px;width:520px;color:#666;font:14px/23px Arial,Verdana,sans-serif;}
 h1,h2,h3,p,ul,ol,form,section{margin:0 0 20px 0;}
-h1{color:#333;font-size:20px;}
-h2,h3{color:#333;font-size:14px;}
+h1{color:#5B5B5B;font-size:20px;}
+h2,h3{color:#5B5B5B;font-size:14px;}
 h3{margin:0;font-size:12px;font-weight:bold;}
 ul,ol{list-style-position:inside;color:#999;}
 ul{list-style-type:square;}
@@ -56,7 +56,7 @@ pre{
 }
 pre code{background:transparent;border:none;padding:0;}
 pre span.string {color: #cc0000;}
-a{color:#069586;}
+a{color: #E53528;}
 header{padding: 30px 0;text-align:center;}
 
 ._inputError { color: #069586; }
