--- a/public/assets/css/test.css
+++ b/public/assets/css/test.css
@@ -1,9 +1,3 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8" />
-        <title><?php echo $title?></title>
-<style>
 html,body,div,span,object,iframe,
 h1,h2,h3,h4,h5,h6,p,blockquote,pre,
 abbr,address,cite,code,
@@ -16,7 +10,6 @@ table,caption,tbody,tfoot,thead,tr,th,td,
 article,aside,canvas,details,figcaption,figure,
 footer,header,hgroup,menu,nav,section,summary,
 time,mark,audio,video{margin:0;padding:0;border:0;outline:0;font-size:100%;vertical-align:baseline;background:transparent;}
-body{line-height:1;}
 article,aside,details,figcaption,figure,
 footer,header,hgroup,menu,nav,section{display:block;}
 nav ul{list-style:none;}
@@ -31,8 +24,13 @@ abbr[title],dfn[title]{border-bottom:1px dotted;cursor:help;}
 table{border-collapse:collapse;border-spacing:0;}
 hr{display:block;height:1px;border:0;border-top:1px solid #cccccc;margin:1em 0;padding:0;}
 input,select{vertical-align:middle;}
-html{ background: #EDEDED; height: 100%; }
-body{background:#FFF;margin:0 auto;min-height:100%;padding:0 30px;width:520px;color:#666;font:14px/23px Arial,Verdana,sans-serif;}
+html{ background: #EDEDED; }
+body{ 
+background:#FFF;
+margin:0px;
+min-height:100%;
+height:100%;
+margin:0 auto;padding:0 30px;width:520px;color:#666;font:14px/23px Arial,Verdana,sans-serif;}
 h1,h2,h3,p,ul,ol,form,section{margin:0 0 20px 0;}
 h1{color:#5B5B5B;font-size:20px;}
 h2,h3{color:#5B5B5B;font-size:14px;}
@@ -40,24 +38,33 @@ h3{margin:0;font-size:12px;font-weight:bold;}
 ul,ol{list-style-position:inside;color:#999;}
 ul{list-style-type:square;}
 code,kbd{background:#EEE;border:1px solid #DDD;border:1px solid #DDD;border-radius:4px;-moz-border-radius:4px;-webkit-border-radius:4px;padding:0 4px;color:#666;font-size:12px;}
-pre{background:#EEE;border:1px solid #DDD;border-radius:4px;-moz-border-radius:4px;-webkit-border-radius:4px;padding:5px 10px;color:#666;font-size:12px;}
+pre{
+  white-space: pre-wrap;       /* css-3 */
+  white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+  white-space: -pre-wrap;      /* Opera 4-6 */
+  white-space: -o-pre-wrap;    /* Opera 7 */
+  word-wrap: break-word;       /* Internet Explorer 5.5+ */
+  background:#EEE;
+  border:1px solid #DDD;
+  border-radius:4px;
+  -moz-border-radius:4px;
+  -webkit-
+  border-radius:4px;
+  padding:5px 10px;
+  color:#666;
+  font-size:12px;
+}
 pre code{background:transparent;border:none;padding:0;}
-a{color:#006857;}
+pre span.string {color: #cc0000;}
+a{color: #E53528;}
 header{padding: 30px 0;text-align:center;}
-</style>
 
-    </head>
+._inputError { color: #E53528; }
+.notification {max-width: 800px;border:1px solid;margin-left:0px;margin-bottom:10px;padding:15px;text-align:center;font-weight:bold;font-size: 16px;}
+.notification h1 { margin-bottom: 5px; }
+.notification.success {border-color: #069586;color: #069586;line-height: 24px;background-position:0px 1px}
+.notification.error {border-color: #069586;color: #069586;background-position:0 -7055px;}
 
-    <body>
-        <header> 
-            <a href="/"><img src="/public/assets/images/logo.png" alt="logo" border="0" /></a>
-        </header>
-
-        <h1>Hello World</h1>
-        
-        <section>
-            <p>This is my first page.</p>
-        </section>
-
-    </body>
-</html>
+.alert.alert-success { color: #069586; font-weight: bold; }
+.alert.alert-danger { color: red; font-weight: bold; }
+.alert.alert-info { color: blue; font-weight: bold; }
