--- a/public/assets/css/welcome.css
+++ b/public/assets/css/welcome.css
@@ -1,70 +1,144 @@
-html,body,div,span,object,iframe,
-h1,h2,h3,h4,h5,h6,p,blockquote,pre,
-abbr,address,cite,code,
-del,dfn,em,img,ins,kbd,q,samp,i
-small,strong,sub,sup,var,
-b,i,
-dl,dt,dd,ol,ul,li,
-fieldset,form,label,legend,
-table,caption,tbody,tfoot,thead,tr,th,td,
-article,aside,canvas,details,figcaption,figure,
-footer,header,hgroup,menu,nav,section,summary,
-time,mark,audio,video{margin:0;padding:0;border:0;outline:0;font-size:100%;vertical-align:baseline;background:transparent;}
-article,aside,details,figcaption,figure,
-footer,header,hgroup,menu,nav,section{display:block;}
-nav ul{list-style:none;}
-blockquote,q{quotes:none;}
-blockquote:before,blockquote:after,
-q:before,q:after{content:'';content:none;}
-a{margin:0;padding:0;font-size:100%;vertical-align:baseline;background:transparent;}
-ins{background-color:#ff9;color:#000;text-decoration:none;}
-mark{background-color:#ff9;color:#000;font-style:italic;font-weight:bold;}
-del{text-decoration:line-through;}
-abbr[title],dfn[title]{border-bottom:1px dotted;cursor:help;}
-table{border-collapse:collapse;border-spacing:0;}
-hr{display:block;height:1px;border:0;border-top:1px solid #cccccc;margin:1em 0;padding:0;}
-input,select{vertical-align:middle;}
-html{ background: #EDEDED; }
-body{ 
-background:#FFF;
-margin:0px;
-min-height:100%;
-height:100%;
-margin:0 auto;padding:0 30px;width:520px;color:#666;font:14px/23px Arial,Verdana,sans-serif;}
-h1,h2,h3,p,ul,ol,form,section{margin:0 0 20px 0;}
-h1{color:#5B5B5B;font-size:20px;}
-h2,h3{color:#5B5B5B;font-size:14px;}
-h3{margin:0;font-size:12px;font-weight:bold;}
-ul,ol{list-style-position:inside;color:#999;}
-ul{list-style-type:square;}
-code,kbd{background:#EEE;border:1px solid #DDD;border:1px solid #DDD;border-radius:4px;-moz-border-radius:4px;-webkit-border-radius:4px;padding:0 4px;color:#666;font-size:12px;}
-pre{
-  white-space: pre-wrap;       /* css-3 */
-  white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
-  white-space: -pre-wrap;      /* Opera 4-6 */
-  white-space: -o-pre-wrap;    /* Opera 7 */
-  word-wrap: break-word;       /* Internet Explorer 5.5+ */
-  background:#EEE;
-  border:1px solid #DDD;
-  border-radius:4px;
-  -moz-border-radius:4px;
-  -webkit-
-  border-radius:4px;
-  padding:5px 10px;
-  color:#666;
-  font-size:12px;
+/* Space out content a bit */
+body {
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
-pre code{background:transparent;border:none;padding:0;}
-pre span.string {color: #cc0000;}
-a{color: #E53528;}
-header{padding: 30px 0;text-align:center;}
 
-._inputError { color: #E53528; }
-.notification {max-width: 800px;border:1px solid;margin-left:0px;margin-bottom:10px;padding:15px;text-align:center;font-weight:bold;font-size: 16px;}
-.notification h1 { margin-bottom: 5px; }
-.notification.success {border-color: #069586;color: #069586;line-height: 24px;background-position:0px 1px}
-.notification.error {border-color: #069586;color: #069586;background-position:0 -7055px;}
+/* Everything but the jumbotron gets side spacing for mobile first views */
+.header,
+.footer {
+  padding-right: 15px;
+  padding-left: 15px;
+}
 
-.alert.alert-success { color: blue; font-weight: bold; }
-.alert.alert-danger { color: red; font-weight: bold; }
-.alert.alert-info { color: blue; font-weight: bold; }
+label {
+  font-weight: normal;
+}
+
+/* Custom page header */
+.header {
+  padding-bottom: 20px;
+  padding-top: 10px;
+  border-bottom: 1px solid #e5e5e5;
+}
+/* Make the masthead heading the same height as the navigation */
+.header h3 {
+  margin-top: 0;
+  margin-bottom: 0;
+  line-height: 15px;
+}
+
+.welcome .header p {
+  font-weight: 300;
+  color: #777575;
+  font-size: 1.17em;
+  margin: 2em 0;
+}
+
+/* Custom page footer */
+.footer {
+  padding-top: 19px;
+  color: #777;
+  border-top: 1px solid #e5e5e5;
+}
+
+a {
+  color: #BF342A;
+  background-color: transparent;
+}
+a:hover,
+a:focus {
+  color: #BF342A;
+  outline: 0;
+}
+
+.nav-pills > li > a {
+  color: #5B5B5B;
+}
+
+.nav-pills > li.active > a,
+.nav-pills > li.active > a:hover,
+.nav-pills > li.active > a:focus {
+  color: #5B5B5B;
+  background: none;
+  /* background-color: #5B5B5B; */
+}
+
+.content {
+
+}
+
+.content ul, li {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.content ul {
+  font-size: 16px;
+  margin: 2em 0;
+}
+.content li {
+  list-style: circle;
+  margin: 1em;
+  margin-left: 1em;
+}
+
+.link {
+  font-size: 0.45em;
+}
+
+/* Customize container */
+@media (min-width: 768px) {
+  .container {
+    max-width: 730px;
+  }
+}
+.container-narrow > hr {
+  margin: 30px 0;
+}
+
+
+/* Main marketing message and sign up button */
+.welcome {
+  text-align: center;
+  margin-bottom: 100px;
+}
+.welcome .btn {
+  padding: 14px 24px;
+  font-size: 21px;
+}
+
+/* Main marketing message and sign up button */
+.jumbotron {
+  text-align: left;
+  border-bottom: 1px solid #e5e5e5;
+}
+.jumbotron .btn {
+  padding: 14px 24px;
+  font-size: 21px;
+}
+
+.description p {
+  font-weight: 300;
+  color: #777575;
+  font-size: 1.17em;
+}
+
+/* Responsive: Portrait tablets and up */
+@media screen and (min-width: 768px) {
+  /* Remove the padding we set earlier */
+  .header,
+  .footer {
+    padding-right: 0;
+    padding-left: 0;
+  }
+  /* Space out the masthead */
+  .header {
+    margin-bottom: 30px;
+  }
+  /* Remove the bottom border on the jumbotron for visual effect */
+  .jumbotron {
+    border-bottom: 0;
+  }
+}
